fix formatting on mobile nav burger menu so that it doesnt overlap the page logo

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -61,7 +61,7 @@
     right: 24px;
 
     border: 1px solid $grey-color-light;
-    border-radius: 5px;
+    border-radius: 1px;
     text-align: right;
 
     .menu-icon {
@@ -81,7 +81,7 @@
       clear: both;
       display: none;
       background-color: #ffffff;
-      min-width: 10em;
+      min-width: 1em;
       padding-bottom: 5px;
     }
 
